--- a/shop.yml
+++ b/shop.yml
@@ -1,55 +1,313 @@
-#shop yml
+#################################################################
+# 
+# shop.yml
+# 
+# Author: bsy6766
+# Last modification: 6/12/2015
+# Default file copy: https://github.com/bsy6766/HeadManager-Wiki/blob/master/shop.yml
+# Shop decoration wiki: https://github.com/bsy6766/HeadManager-Wiki/wiki/Shop-Customization
+# 
+# For customization,
+# Read shop decoration wiki before you change customization.
+#  
+# Helpful links
+# Item meterial list: https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Material.html
+# Item color list: https://hub.spigotmc.org/javadocs/spigot/org/bukkit/DyeColor.html
+# 
+# Indices presets
+# Fill all except last line
+#   0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44
+# Fill excluding border slots(the most outer slots)
+#   10, 11, 12, 13, 14, 15, 16, 19, 20, 21, 22, 23, 24, 25, 28, 29, 30, 31, 32, 33, 34, 37, 38, 39, 40, 41, 42, 43
+# Fill border line(the most outer slots)
+#   0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 26, 27, 35, 36, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53
+# Fill all
+#   54
+# Fill nothing
+#   -1
+# 
+#################################################################
 
-#purchase node. Set child node to true to enable each tab, false to disable.
-purchase:
-    enable:
-        food: true
-        device: true
-        misc: true
-        alphabet: true
-        interior: true
-        color: true
-        block: true
-        mob: true
-        game: true
-        character: true
-        pokemon: true
-        easter: true
-        mhf: true
-        onlineplayer: true
-        offlineplayer: true
-        #server: true
-#return node. Set child node to true to enable return
-return:
-    enable:
-        custom: true
-        mhf: false
-        player: false
-    
-#set true if you want to sell wither skeleton head in MHF tab. Beware that player will able to spawn wither if they can buy off from shop.
-sell_witherskel_head: false
+# Global settings
+# These settings are that apply to all pages in GUI shop.
+#
+# Filler item
+# 
+filler_icon_enable: true
+filler_icon_material: STAINED_GLASS_PANE
+filler_icon_color: GRAY
+filler_icon_indices: 54
+filler_icon_name: " "
+# 
+# Border item
+# 
+border_icon_enable: true
+border_icon_material: STAINED_GLASS_PANE
+border_icon_color: BLACK
+border_icon_indices: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 26, 27, 35, 36, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53
+border_icon_name: " "
+# 
+# Close button
+# 
+close_button_icon_enable: true
+close_button_icon_material: STAINED_GLASS_PANE
+close_button_icon_color: RED
+close_button_icon_index: 8
+close_button_icon_name: "Close Shop"
+# 
+# Version button
+# 
+version_button_icon_enable: true
+version_button_icon_material: STAINED_GLASS_PANE
+version_button_icon_color: LIGHT_BLUE
+version_button_icon_index: 53
+#%VERSION will be replaced by current version of plugin
+version_button_icon_name: "v%VERSION"
+# 
 
-#Tab Names. make sure you save this file with proper encoding base on your languages.
-Food_tabName: "Food Heads"
-Device_tabName: "Device Heads"
-Misc_tabName: "Misc Heads"
-Alphabet_tabName: "Alphabet Heads"
-Interior_tabName: "Interior Heads"
-Color_tabName: "Color Heads"
-Block_tabName: "Block heads"
-Mobs_tabName: "Mobs Heads"
-Game_tabName: "Game Heads"
-Character_tabName: "Chracter Heads"
-Pokemon_tabName: "Pokemon Heads"
-Easter_tabName: "Easter Heads"
-MHF_tabName: "MHF Heads"
-OnlinePlayer_tabName: "Players(ONLINE) Heads"
-OfflinePlayer_tabName: "Players(OFFLINE/ALL) Heads"
-to_menu_iconName: "To Menu"
-to_first_page_iconName: "To First Page"
-to_last_page_iconName: "To Last Page"
-to_next_page_iconName: "To Next Page"
-to_prev_page_iconName: "To Prev Page"
-close_shop_iconName: "Close Shop"
-purchase_buy_iconName: "Purchase/Buy Heads"
-return_sell_iconName: "Return/Sell Heads"
+# Front page
+# These settings are for front page of GUI shop
+# Related command: /headshop
+# 
+# GUI Name (Max 32 characters including space character)
+# 
+front_page_name: "Head Shop"
+#
+# Purchase/Buy button
+# 
+purchase_shop_icon_enable: true
+purchase_shop_icon_material: EMERALD
+purchase_shop_icon_color: WHITE
+purchase_shop_icon_index: 21
+purchase_shop_icon_name: "Purchase/Buy Heads"
+# 
+# Return/Sell button
+# 
+return_shop_icon_enable: true
+return_shop_icon_material: PAPER
+return_shop_icon_color: WHITE
+return_shop_icon_index: 23
+return_shop_icon_name: "Return/Sell Heads"
+# 
+
+# Purchase Page
+# These settings are for Purchase page of GUI shop
+# 
+# GUI Name (Max 32 characters including space character)
+# 
+purchase_page_name: "Purchase Shop"
+# 
+# Tab buttons
+# These settings are for tab buttons(ie. Food, Device, MHF, etc). 
+# These buttons won't have customization for item.
+# icon_index is the position of the item. 
+# (See Shop Customization if you don't know what this number means.)
+# 
+Food:
+    # position
+    icon_index: 10
+    # true: show icon. false: hide icon.
+    icon_display: true
+    # true: Can click icon and view heads. false: Clicking this icon will do nothing
+    icon_enable: true
+    # true: Can actually purchase heads. View all tab will have this tab's heads. false: Can't purchase. View all tab will not have this tab's heads. 
+    item_purchasable: true
+    # name 
+    icon_name: "Food"
+Device:
+    icon_index: 11
+    icon_display: true
+    icon_enable: true
+    item_purchasable: true
+    icon_name: "Device"
+Misc:
+    icon_index: 12
+    icon_display: true
+    icon_enable: true
+    item_purchasable: true
+    icon_name: "Misc"
+Alphabet:
+    icon_index: 13
+    icon_display: true
+    icon_enable: true
+    item_purchasable: true
+    icon_name: "Alphabet"
+Interior:
+    icon_index: 19
+    icon_display: true
+    icon_enable: true
+    item_purchasable: true
+    icon_name: "Interior"
+Color:
+    icon_index: 20
+    icon_display: true
+    icon_enable: true
+    item_purchasable: true
+    icon_name: "Color"
+Block:
+    icon_index: 21
+    icon_display: true
+    icon_enable: true
+    item_purchasable: true
+    icon_name: "Block"
+Mob:
+    icon_index: 22
+    icon_display: true
+    icon_enable: true
+    item_purchasable: true
+    icon_name: "Mob"
+Game:
+    icon_index: 28
+    icon_display: true
+    icon_enable: true
+    item_purchasable: true
+    icon_name: "Game"
+Character:
+    icon_index: 29
+    icon_display: true
+    icon_enable: true
+    item_purchasable: true
+    icon_name: "Character"
+Pokemon:
+    icon_index: 30
+    icon_display: true
+    icon_enable: true
+    item_purchasable: true
+    icon_name: "Pokemon"
+Easter:
+    icon_index: 31
+    icon_display: true
+    icon_enable: true
+    item_purchasable: true
+    icon_name: "Easter"
+MHF:
+    icon_index: 37
+    icon_display: true
+    icon_enable: true
+    item_purchasable: true
+    icon_name: "MHF"
+    # Option to sell wither skeleton in MHF tab.
+    sell_witherskel_head: false
+OnlinePlayer:
+    icon_index: 38
+    icon_display: true
+    icon_enable: true
+    item_purchasable: true
+    icon_name: "OnlinePlayer"
+OfflinePlayer:
+    icon_index: 39
+    icon_display: true
+    icon_enable: true
+    item_purchasable: true
+    icon_name: "OfflinePlayer"
+#
+# View All tab button
+ViewAll_icon_material: BOOK
+ViewAll_icon_color: WHITE
+ViewAll:
+    icon_index: 43
+    icon_display: true
+    icon_enable: true
+    # %TOTALCOUNT will be replaced with total number of heads available in GUI shop
+    icon_name: "View All %TOTALCOUNT"
+# 
+# These setting are extra settings for tab icon name. 
+# For icon name format, %COUNT will be replaced with heads number available in the tab, 
+# and %TABICONNAME will be replaced with tab.icon_name above.
+# For postfix, it will replace %POSTFIX. 
+# This doesn't apply to View All tab.
+# 
+icon_name_postfix: "Heads"
+icon_name_format: "%COUNT %TABICONNAME %POSTFIX"
+#
+
+# Tab page
+# These settings are for tab pages(where you browse heads)
+#
+# GUI Name
+# 
+# %TABNAME will be replaced with 'tab_icon_name' nodes above. 
+# ie. Food tab GUI page will use 'Food.icon_name' node and it will be 'Food Tab' as result.
+#     %TOTALCOUNT in View All tab will be ignored in this case
+tab_page_name: "%TABNAME Tab"
+#
+# Content Poistion
+# This setting is positions that heads in GUI shop will be placed.
+content_indices: 10, 11, 12, 13, 14, 15, 16, 19, 20, 21, 22, 23, 24, 25, 28, 29, 30, 31, 32, 33, 34, 37, 38, 39, 40, 41, 42, 43
+# 
+# Browsing buttons
+# These items won't have customization.
+# 
+# To Menu button
+# 
+to_menu_icon_index: 49
+to_menu_icon_name: "To Menu"
+# 
+# To First Page button
+# 
+to_first_page_icon_index: 45
+to_first_page_icon_name: "To First Page"
+#
+# To Previous Page button
+#
+to_prev_page_icon_index: 46
+to_prev_page_icon_name: "To Previous Page"
+#
+# To Next Page button 
+# 
+to_next_page_icon_index: 52
+to_next_page_icon_name: "To Next Page"
+#
+# To Last Page button
+#
+to_last_page_icon_index: 53
+to_last_page_icon_name: "To Last Page"
+#
+
+# Return Page
+# These settings are for return page(where you sell heads)
+#
+# GUI Name
+# 
+return_page_name: "Return Shop"
+# 
+# Head holder position
+# This setting is positions where players hold their head to sell, check price, etc.
+# Only heads in this position will be sold, returned to players' inventory on close, price check, etc.
+#
+return_shop_head_holder_indices: 10, 11, 12, 13, 14, 15, 16, 19, 20, 21, 22, 23, 24, 25, 28, 29, 30, 31, 32, 33, 34, 37, 38, 39, 40, 41, 42, 43
+# 
+# Returnable head type
+# Set true to let player return/sell heads for specific types.
+# MHF and player heads are set false by default to prevent gold farming
+#
+returnable:
+    # custom includes all tab except player heads and MHF heads
+    custom: true
+    mhf: false
+    player: false
+# 
+# Update price button
+# 
+return_shop_update_icon_material: PAPER
+return_shop_update_icon_color: WHITE
+return_shop_update_icon_index: 49
+return_shop_update_icon_name: "Update Price"
+return_shop_update_required_icon_name: "Update Price(REQUIRED)"
+# 
+# Transaction button
+# 
+return_shop_transaction_icon_material: EMERALD
+return_shop_transaction_icon_color: WHITE
+return_shop_transaction_icon_index: 51
+# %TOTALCOST will be replaced with total cost of selling head
+return_shop_transaction_icon_name: "Confirm transaction $%TOTALCOST"
+return_shop_transaction_required_icon_name: "<- Update price first"
+ 
+
+
+
+
+
+
+
